margins on mobile fixed

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -336,7 +336,9 @@ h3 {
 
     .header-container {
       width: 100%;
+      max-width: 100%;
       max-height: 100%;
+      overflow: hidden;
     }
 
     .shrink {
